--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "test",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +10,18 @@
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^4.3.1",
+    "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nazifa22/netlify.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nazifa22/netlify/issues"
+  },
+  "homepage": "https://github.com/nazifa22/netlify#readme",
+  "dependencies": {},
+  "description": ""
 }
